--- a/status.html
+++ b/status.html
@@ -18,7 +18,7 @@
 
         logging("connecting...")
 
-        const url = "ws://p3855004-ipxg22401hodogaya.kanagawa.ocn.ne.jp:44777";
+        const url = "wss://p3855004-ipxg22401hodogaya.kanagawa.ocn.ne.jp:44777";
         const ws = new WebSocket(url);
 
         ws.onerror = function(error) {
