Co-authored-by: update 6 files mskpc033@outlook.jp <mskpc033@outlook.jp>

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     <header></header>
 
     <div id="top-wrapper">
-
+        
     </div>
 
     <footer></footer>
+
+    <script src="/scripts/def.js"></script>
 </body>
 </html> 
