--- a/header.html
+++ b/header.html
@@ -1,3 +1,20 @@
-<di>
-
-</di>
+<div class="container">
+    <div class="header-left">
+        <div class="logo">
+            <a href="/">Babel Server</a>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="/">ホーム</a></li>
+                <li><a href="/status.html">ステータス</a></li>
+                <li><a href="/about.html">私たちについて</a></li>
+                <li><a href="/donate.html">寄付</a></li>
+                <li><a href="/contact.html">お問い合わせ</a></li>
+            
+            </ul>
+        </nav>
+    </div>
+    <div class="header-right">
+        <a href="/login.html">ログイン</a>
+    </div>
+</div>
