--- a/def.html
+++ b/def.html
@@ -5,13 +5,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Babel Server</title>
         <link rel="stylesheet" href="styles/def.css" />
-        <link rel="stylesheet" href="styles/index.css" />
+        <link rel="stylesheet" href="styles/*.css" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     </head>
     <body>
         <header></header>
 
-        <div id="top-wrapper"></div>
+        <div id="*-wrapper"></div>
 
         <footer></footer>
 
