--- a/tools/json-editor/index.html
+++ b/tools/json-editor/index.html
@@ -15,6 +15,8 @@
         <div class="buttons">
             <button id="import">Import</button>
             <button id="export">Export</button>
+            <button id="get">Get</button>
+            <button id="post">Post</button>
         </div>
         <textarea id="jsonOutput" rows="10" cols="50"></textarea>
     </div>
